# window-trees

./: .gitignore  CMakeLists.txt  Doxyfile  readme.md
lib/: gbutton.cpp  gcheckbox.cpp  gconsolewindow.cpp  gdiffimage.cpp  gevent.cpp  gevent.h  gtextfield.cpp
src/: blah.cpp  blahblah.cpp  windowTreeMain.cpp
src/MiniDisplayServer/: DisplayServer.h
src/Protocol/: .gitignore  CMakeLists.txt  Events.h  Logger.cpp  Logger.h  ServerInterface.h  types.cpp  types.h  xtypes.h
src/SDL/: DisplayServerSDL.h
src/SDLServer/: CMakeLists.txt  DisplayServerSDL.cpp  DisplayServerSDL.h  ServerScreenSDL.cpp  ServerScreenSDL.h  ServerWindowSDL.cpp  ServerWindowSDL.h
src/SDLServer/SDLClient/: CMakeLists.txt  FindSDL2.cmake  SDLClient.cpp
src/SGLServer/: .gitignore  CMakeLists.txt  SGLScreen.h  SGLServer.cpp  SGLServer.h  SGLServerScreen.h  SGLServerWindow.h  SGLWindow.cpp  SGLWindow.h
src/SGLServer/SGLClient/: .gitignore  CMakeLists.txt  sglClientMain.cpp
src/SGLServer/lib/: glabel.cpp  gtextarea.cpp
src/SGLServer/libSGL/: CMakeLists.txt  gcanvas.cpp  gobservable.cpp  gradiobutton.cpp
src/SGLServer/sglClient/: CMakeLists.txt  lemonFirMain.cpp  sglClientMain.cpp  winterFaceClientMain.cpp
src/SGL_Client/: sglClientMain.cpp
src/SGL_Server_Backend/: CMakeLists.txt  DisplayServer.cpp  DisplayServer.h  DisplayServerScreen.h  DisplayServerWindow.h
src/Term/: CMakeLists.txt  TermServer.cpp  TermServer.h  term.cpp
src/Tiles/: .gitignore  CMakeLists.txt
src/Tiles/src/: Tile.cpp  Tile.h  TileMain.cpp  TileManager.cpp  TileManager.h  notes
src/WindowManager/: .gitignore  CMakeLists.txt  HauntedSnag.h  WM.cpp  WM.h  WMWorkspace.h  WindowManager.cpp  WindowManager.h  WindowNode.cpp  WindowNode.h  WindowTree.cpp  WindowTree.h  WindowTreeInterface.cpp  WindowTreeInterface.h  Workspace.cpp  Workspace.h  WorkspaceManagerWorkspace.cpp
src/WindowManager/BSPTree/: BSPNode.cpp  BSPNode.h  BSPTree.cpp  BSPTree.h  CMakeLists.txt
src/WindowManager/HeapTree/: CMakeLists.txt  HeapTree.cpp  HeapTree.h  WindowNode.cpp  WindowNode.h
src/WindowManager/LemonFir/: CMakeLists.txt  LemonFir.cpp  LemonFir.h  LemonFirNode.cpp  LemonFirNode.h  lemonFirMain.cpp
src/WindowManager/MasterAndStack/: CMakeLists.txt  MasterStack.cpp  MasterStack.h  MasterStackNode.cpp  MasterStackNode.h
src/XServer/: .gitignore  CMakeLists.txt  XScreen.h  XServer.cpp  XServer.h
src/XServer/XClient/: CMakeLists.txt  run.sh  xClientMain.cpp
src/sglServer/: sglServer.h
src/sglServer/lib/: geventqueue.cpp
